--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "babel server -d lib",
-    "devStart": "nodemon server/index.js --exec babel-node",
+    "dev": "nodemon server/index.js --exec babel-node",
     "start": "babel-node server/index.js"
   },
   "author": "",
@@ -18,6 +18,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.16",
     "nanoid": "^3.1.20",
+    "peer": "^0.6.1",
+    "socket.io": "^3.1.1",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
